// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-86yepl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-86yepl[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-86yepl[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-86yepl[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tb7a1s {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tb7a1s[aria-disabled='false'],
.cache-1tb7a1s[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1tb7a1s[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true']>label,
.cache-1tb7a1s[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1tb7a1s[data-checked='true'] {
  color: #521094;
}

.cache-1tb7a1s[data-error='true'] {
  color: #b3144d;
}

.cache-1tb7a1s[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tb7a1s input+svg {
  display: none;
}

.cache-1tb7a1s label {
  display: none;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-86yepl e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1tb7a1s ehkrmld0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1beq7ey ehkrmld1"
          id="test-test"
          name="test"
          type="radio"
          value="test"
        />
        <svg
          class="cache-68yjjn ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld4"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
      </div>
      Radio field
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-86yepl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-86yepl[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-86yepl[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-86yepl[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tb7a1s {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tb7a1s[aria-disabled='false'],
.cache-1tb7a1s[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1tb7a1s[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true']>label,
.cache-1tb7a1s[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1tb7a1s[data-checked='true'] {
  color: #521094;
}

.cache-1tb7a1s[data-error='true'] {
  color: #b3144d;
}

.cache-1tb7a1s[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tb7a1s input+svg {
  display: none;
}

.cache-1tb7a1s label {
  display: none;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-86yepl e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1tb7a1s ehkrmld0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-1beq7ey ehkrmld1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-68yjjn ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld4"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
      </div>
      Radio field checked
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-86yepl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-86yepl[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-86yepl[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-86yepl[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tb7a1s {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tb7a1s[aria-disabled='false'],
.cache-1tb7a1s[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1tb7a1s[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true']>label,
.cache-1tb7a1s[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1tb7a1s[data-checked='true'] {
  color: #521094;
}

.cache-1tb7a1s[data-error='true'] {
  color: #b3144d;
}

.cache-1tb7a1s[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tb7a1s input+svg {
  display: none;
}

.cache-1tb7a1s label {
  display: none;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-86yepl e1s5n3hj1"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <div
        aria-disabled="true"
        class="e1s5n3hj0 cache-1tb7a1s ehkrmld0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1beq7ey ehkrmld1"
          disabled=""
          id="test-disabled"
          name="test"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-68yjjn ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld4"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
      </div>
      Radio field disabled
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-86yepl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-86yepl[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-86yepl[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-86yepl[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tb7a1s {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tb7a1s[aria-disabled='false'],
.cache-1tb7a1s[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1tb7a1s[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true']>label,
.cache-1tb7a1s[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1tb7a1s[data-checked='true'] {
  color: #521094;
}

.cache-1tb7a1s[data-error='true'] {
  color: #b3144d;
}

.cache-1tb7a1s[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tb7a1s input+svg {
  display: none;
}

.cache-1tb7a1s label {
  display: none;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-86yepl e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1tb7a1s ehkrmld0"
        data-checked="false"
        data-error="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="true"
          class="cache-1beq7ey ehkrmld1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-68yjjn ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld4"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
      </div>
      Radio field error
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-86yepl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-86yepl[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-86yepl[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-86yepl[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-86yepl:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-86yepl:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tb7a1s {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tb7a1s[aria-disabled='false'],
.cache-1tb7a1s[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1tb7a1s:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1tb7a1s[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true']>label,
.cache-1tb7a1s[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1tb7a1s[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1tb7a1s[data-checked='true'] {
  color: #521094;
}

.cache-1tb7a1s[data-error='true'] {
  color: #b3144d;
}

.cache-1tb7a1s[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tb7a1s input+svg {
  display: none;
}

.cache-1tb7a1s label {
  display: none;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-86yepl e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1tb7a1s ehkrmld0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1beq7ey ehkrmld1"
          id="test-events"
          name="test"
          type="radio"
          value="events"
        />
        <svg
          class="cache-68yjjn ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld4"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
      </div>
      Radio field events
    </div>
  </form>
</DocumentFragment>
`;
